--- a/src/assets/scss/_reset.scss
+++ b/src/assets/scss/_reset.scss
@@ -135,12 +135,12 @@ table {
   &::-webkit-scrollbar {
     width: 5px;
     height: 5px;
-    background: rgba(0, 0, 0, 0.05);
+    background: rgba(255,255,255, 0.05);
   }
 
   &::-webkit-scrollbar-thumb {
     border-radius: 5px;
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(255,255,255, 0.4);
   }
 }
 
